<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="application">GNCAndroid</string>
	<string name="app_descr">GnuCash for Android</string>
	<string name="app_name">GNCAndroid</string>
	<string name="ic_tab_quick">Quick Entry</string>
	<string name="ic_tab_accounts">Account Summary</string>
	<string name="ic_tab_actions">Actions</string>
	<string name="menu_prefs">Preferences</string>
	<string name="pref_app_about">About</string>
	<string name="pref_app_help">Help</string>
	<string name="pref_data_file_location">Data File Location</string>
	<string name="no_files_error">No Files here...</string>
	<string name="sdcard_error">SD Card Not Found</string>
	<string name="directory_error">Cannot access directory.</string>
	<string name="file_choose_title">Choose Data File</string>
	<string name="no_data_file">No Data File.</string>
	<string name="message_set_data_file">Set data file location.</string>
	<string name="message_failed_to_read_data_file">Failed to read data file. Try again.</string>
	<string name="button_text_ok">Ok</string>
	<string name="long_account_names">Use long account Names?</string>
	<string name="pref_long_account_names">Use Long Account Names</string>
	<string name="menu_file_pref">Data File Details</string>
	<string name="menu_save">Save</string>
	<string name="menu_filter">Filter</string>
	<string name="menu_discard">Discard</string>
	<string name="menu_app_pref">Application Details</string>
	<string name="pref_app_version">Version</string>
	<string name="label_date">Date:</string>
	<string name="label_description">Description:</string>
	<string name="label_to">To:</string>
	<string name="label_from">From:</string>
	<string name="label_amount">Amount:</string>
	<string name="button_save">Save</string>
	<string name="button_clear">Clear</string>
	<string name="app_version_history">Version 0.1 - Testing.</string>
	<string name="alert_dialog_ok">Ok</string>
	<string name="app_about_text">About GnuCash Companion for Android.</string>
	<string name="label_transtype">Transaction Type:</string>
	<string name="parser_type">Parser to be used</string>
	<string name="summary_parser_type">Select a parser type to be used.</string>
	<string name="dialog_title_parser_types">Select Parser Type</string>
	<string name="error_prefs_not_set">Error in Preferences</string>
	<string name="error_message_prefs_not_set">You should set both Data File location and Parser
		Type.</string>
	<string name="menu_book">Book Details</string>
<string name="data_file">Data File</string>
<string name="book_version">Book Version</string>
<string name="comp_name">Company Name</string>
<string name="comp_id">Company ID</string>
<string name="comp_addr">Address</string>

<string name="comp_email">E-Mail</string>
<string name="comp_url">Web Site</string>
<string name="comp_phone">Phone Number</string>
<string name="comp_fax">Fax Number</string>
<string name="comp_contact">Contact Person</string>


<string name="book_cntaccounts">Accounts</string>
<string name="comp_details">Company Details</string>
<string name="book_deftaxtable">Default Tax Tables</string>
<string name="customer">Customer</string>
<string name="vendor">Vendor</string>
<string name="book_counts">Data Counts</string>
<string name="accounts">Accounts</string>
<string name="transactions">Transactions</string>
<string name="schedxactions">Scheduled</string>
<string name="customers">Customers</string>
<string name="vendors">Vendors</string>
<string name="employees">Employees</string>
<string name="jobs">Jobs</string>
<string name="invoices">Invoices</string>
<string name="entries">Entries</string>
<string name="taxtables">Tax Tables</string>
<string name="billterms">Bill Terms</string>


<string name="menu_options_pref">Options</string>
<string name="filterprefscreen">FilterPrefScreen</string>
<string name="acountfilter">Account Filter</string>
<string name="filterbyaccounttype">Filter By Account Type</string>
<string name="other">Other</string>
<string name="pref_show_hidden_account">show_hidden_account</string>
<string name="show_hidden_account">Show Hidden Accounts</string>
<string name="pref_show_zero_total_accounts">show_zero_total_accounts</string>
<string name="show_zero_total_accounts">Show Zero Total Accounts</string>

<string name="pref_account_type_bank">account_type_bank</string>
<string name="account_type_bank">Bank</string>
<string name="pref_account_type_cash">account_type_cash</string>
<string name="account_type_cash">Cash</string>
<string name="pref_account_type_asset">account_type_asset</string>
<string name="account_type_asset">Asset</string>
<string name="pref_account_type_cc">account_type_cc</string>
<string name="account_type_cc">Credit Card</string>
<string name="pref_account_type_liability">account_type_liability</string>
<string name="account_type_liability">Liability</string>
<string name="pref_account_type_stock">account_type_stock</string>
<string name="account_type_stock">Stock</string>
<string name="pref_account_type_mutual_fund">account_type_mutual_fund</string>
<string name="account_type_mutual_fund">Mutual Fund</string>
<string name="pref_account_type_currency">account_type_currency</string>
<string name="account_type_currency">Currency</string>
<string name="pref_account_type_income">account_type_income</string>
<string name="account_type_income">Income</string>
<string name="pref_account_type_expense">account_type_expense</string>
<string name="account_type_expense">Expense</string>
<string name="pref_account_type_equity">account_type_equity</string>
<string name="account_type_equity">Equity</string>
<string name="pref_account_type_a_receivable">account_type_a_receivable</string>
<string name="account_type_a_receivable">A/Receivable</string>
<string name="pref_account_type_a_payable">account_type_a_payable</string>
<string name="account_type_a_payable">A/Payable</string>
<string name="pref_account_type_trading">account_type_trading</string>
<string name="account_type_trading">Trading</string>


</resources>