<?xml version="1.0" encoding="utf-8"?>
<TableLayout
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:layout_alignParentTop="true"
android:layout_alignParentLeft="true"
xmlns:android="http://schemas.android.com/apk/res/android"
>
	<TableRow
	android:id="@+id/transtype_row"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	>
		<TextView
		android:id="@+id/TextViewTransTypeLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="3dip"
		android:text="@string/label_transtype"
		>
		</TextView>
	    <Spinner 
	        android:id="@+id/transtype_spinner"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/label_transtype"
	    />
	</TableRow>
	<TableRow
	android:id="@+id/date_row"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	>
		<TextView
		android:id="@+id/TextViewDateLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="3dip"
		android:text="@string/label_date"
		>
		</TextView>
		<Button
		android:id="@+id/ButtonDate"
		android:layout_height="wrap_content"
		android:padding="3dip"
		android:text="@+id/ButtonDate"
		android:layout_width="match_parent">
		</Button>
	</TableRow>
	<TableRow
	android:id="@+id/widget46"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	>
		<TextView
		android:id="@+id/widget33"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="3dip"
		android:text="@string/label_description"
		>
		</TextView>
		<AutoCompleteTextView
		class="rednus.gncandroid.QuickEntryActivity$DescriptionAutoComplete"
		android:id="@+id/EditTextDescriptoin"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text=""
		>
		</AutoCompleteTextView>
	</TableRow>
	<TableRow
	android:id="@+id/widget48"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	>
		<TextView
		android:id="@+id/widget35"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="3dip"
		android:text="@string/label_to"
		>
		</TextView>
		
		<Spinner 
		android:id="@+id/spinner_to" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		>
		</Spinner>
	</TableRow>
	<TableRow
	android:id="@+id/widget49"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	>
		<TextView
		android:id="@+id/widget37"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="3dip"
		android:text="@string/label_from"
		>
		</TextView>
		<Spinner 
		android:id="@+id/spinner_from" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		>
		</Spinner>
	</TableRow>
	<TableRow
	android:id="@+id/widget47"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	>
		<TextView
		android:id="@+id/widget39"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:padding="3dip"
		android:text="@string/label_amount"
		>
		</TextView>
		<EditText
		android:id="@+id/amount"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text=""
		android:numeric="decimal|signed"
		>
		</EditText>
	</TableRow>
</TableLayout>
